--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
     url: jdbc:h2:mem:testdb
     driver-class-name: org.h2.Driver
     username: inghubs
-    password: inghubs123
+    password: inghubs
   h2:
     console:
       enabled: true
